唯一注解校验器: 自动转化小驼峰参数、支持创建、更新自动判断